hphp/hack/test/typecheck/tests_bypass_visibility/nested_test_class.php.exp
ERROR: File "nested_test_class.php", line 27, characters 9-14:
You cannot access this member (Typing[4112])
  File "nested_test_class.php", line 7, characters 20-25:
  This member is private
